2-vs-petstore.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: petstore-2
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - 'foo'
    routes:
    - matchers:
      - prefix: /wine
      routeAction:
        single:
          upstream:
            name: default-petstore-8080
            namespace: gloo-system
